# crypto-training-exercises

./: README.md
bls/: Cargo.toml
bls/src/: bls_scheme.rs  main.rs
ff-ec/: Cargo.toml
ff-ec/src/: main.rs
schnorr/: Cargo.toml
schnorr/src/: main.rs  schnorr_scheme.rs
