[package]
name = "bls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
